<resources>

    <string name="app_name">Area Description Manager</string>

    <string name="title_app_name">Area Description Manager</string>
    <string name="title_sign_in">Sign In</string>
    <string name="title_tango_permission">Tango Permission</string>
    <string name="title_user_area_list">Areas</string>
    <string name="title_tango_area_description_list">Tango Area Descriptions</string>
    <string name="title_user_area_description_list">User Area Descriptions</string>
    <string name="title_user_scene_list">Scenes</string>
    <string name="title_select_user_area">Select Area</string>
    <string name="title_format_user_area_description_list_in_area">User area descriptions - %s</string>
    <string name="title_user_actor_image_list">User Actor Images</string>

    <string name="menu_sign_out">Sign out</string>

    <string name="action_create">Create</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_export">Export</string>
    <string name="action_import">Import</string>
    <string name="action_upload">Upload</string>
    <string name="action_download">Download</string>
    <string name="action_delete_cache">Delete cache</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>

    <string name="nav_user_area_list">Areas</string>
    <string name="nav_tango_area_description_list">Tango area descriptions</string>
    <string name="nav_user_area_description_list">User area descriptions</string>
    <string name="nav_user_scene_list">User scenes</string>
    <string name="nav_user_actor_image_list">User actor images</string>
    <string name="nav_sign_out">Sign out</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="button_save">Save</string>
    <string name="button_export">Export</string>
    <string name="button_import">Import</string>
    <string name="button_upload">Upload</string>
    <string name="button_delete">Delete</string>
    <string name="button_user_area_description_in_area">Show user area descriptions in this area</string>
    <string name="button_user_scenes_in_area">Show user scenes in this area</string>

    <string name="progress_dialog_signin_in">Signing in...</string>
    <string name="progress_dialog_delete">Deleting...</string>
    <string name="progress_dialog_upload">Uploading...</string>
    <string name="progress_dialog_download">Downloading...</string>

    <string name="snackbar_done">Done.</string>
    <string name="snackbar_failed">Failed.</string>
    <string name="snackbar_area_learning_permission_required">Area Learning permission required.</string>
    <string name="snackbar_signed_in">Signed in.</string>
    <string name="snackbar_google_sign_in_failed">Google Sign-In failed.</string>
    <string name="snackbar_firebase_sign_in_failed">Authentication failed.</string>
    <string name="snackbar_signed_out">Signed out.</string>
    <string name="snackbar_permission_required">Permission not granted.</string>
    <string name="snackbar_action_request_permission">Request permission</string>
    <string name="snackbar_google_sign_in_reqiured">Sign-in required.</string>
    <string name="snackbar_action_request_sign_in">Sign-in</string>

    <string name="toast_google_api_client_connection_failed">Google Play Services error.</string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_content_confirm_delete">Delete this?</string>

    <string name="label_id">ID</string>
    <string name="label_created_at">Created At</string>
    <string name="label_updated_at">Updated At</string>
    <string name="label_name">Name</string>
    <string name="label_place">Place</string>
    <string name="label_level">Level</string>
    <string name="label_area">Area</string>
    <string name="label_in_tango">In Tango</string>
    <string name="label_in_cloud">In Cloud</string>
    <string name="label_in_cache">In Cache</string>
    <string name="label_image">Image</string>

    <string name="hint_edit_name">Type the name</string>
    <string name="hint_edit_place">Place</string>
    <string name="hint_edit_text_image_name">Input an image name.</string>

    <string name="input_error_name_required">Name is required.</string>

    <string name="field_imported">Imported</string>
    <string name="field_not_imported">Not Imported</string>

    <string name="field_uploaded">Uploaded</string>
    <string name="field_not_uploaded">Not Uploaded</string>
    <string name="field_cached">Cached</string>
    <string name="field_not_cached">Not Cached</string>
    <string name="field_exported">Exported</string>
    <string name="field_not_exported">Not Exported</string>
    <string name="button_select_image">Select Image</string>
    <string name="notification_upload_text">Uploading ...</string>
    <string name="notification_upload_title">Upload</string>

</resources>
