<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/view_top"
              android:paddingStart="@dimen/content_horizontal_margin"
              android:paddingEnd="@dimen/content_horizontal_margin"
              android:paddingTop="@dimen/content_vertical_margin"
              android:paddingBottom="@dimen/content_vertical_margin"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView android:id="@+id/text_view_label_id"
              android:text="@string/label_id"
              android:textAppearance="@style/TextAppearanceLabel"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <TextView android:id="@+id/text_view_id"
              android:textAppearance="@style/TextAppearanceField"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <TextView android:id="@+id/text_view_label_create_at"
              android:text="@string/label_created_at"
              android:textAppearance="@style/TextAppearanceLabel"
              android:layout_marginTop="@dimen/content_vertical_margin"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <TextView android:id="@+id/text_view_created_at"
              android:textAppearance="@style/TextAppearanceField"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <TextView android:id="@+id/text_view_label_name"
              android:text="@string/label_name"
              android:textAppearance="@style/TextAppearanceLabel"
              android:layout_marginTop="@dimen/content_vertical_margin"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <TextView android:id="@+id/text_view_name"
              android:textAppearance="@style/TextAppearanceField"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <TextView android:id="@+id/text_view_label_place"
              android:text="@string/label_place"
              android:textAppearance="@style/TextAppearanceLabel"
              android:layout_marginTop="@dimen/content_vertical_margin"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <TextView android:id="@+id/text_view_place_name"
              android:textAppearance="@style/TextAppearanceField"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <TextView android:id="@+id/text_view_place_address"
              android:textAppearance="@style/TextAppearanceField"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <TextView android:id="@+id/text_view_label_level"
              android:text="@string/label_level"
              android:textAppearance="@style/TextAppearanceLabel"
              android:layout_marginTop="@dimen/content_vertical_margin"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <TextView android:id="@+id/text_view_level"
              android:textAppearance="@style/TextAppearanceField"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

</LinearLayout>
