<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/view_top"
              android:paddingStart="@dimen/content_horizontal_margin"
              android:paddingEnd="@dimen/content_horizontal_margin"
              android:paddingTop="@dimen/content_vertical_margin"
              android:paddingBottom="@dimen/content_vertical_margin"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="com.lakeel.altla.vision.admanager.presentation.view.fragment.UserActorImageFragment">

    <TextView android:text="@string/label_id"
              android:textAppearance="@style/TextAppearance.AppCompat.Body1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>

    <TextView android:id="@+id/text_view_id"
              android:textAppearance="@style/TextAppearance.AppCompat.Caption"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <TextView android:text="@string/label_image"
              android:textAppearance="@style/TextAppearance.AppCompat.Body1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>

    <FrameLayout android:id="@+id/view_group_image"
                 android:layout_marginStart="@dimen/content_horizontal_margin"
                 android:layout_marginEnd="@dimen/content_horizontal_margin"
                 android:layout_marginTop="@dimen/content_vertical_margin"
                 android:layout_marginBottom="@dimen/content_vertical_margin"
                 android:layout_width="@dimen/user_actor_image_width"
                 android:layout_height="@dimen/user_actor_image_height">

        <ImageView android:id="@+id/image_view_thumbnail"
                   android:layout_width="@dimen/user_actor_image_width"
                   android:layout_height="@dimen/user_actor_image_height"/>

        <ProgressBar android:id="@+id/progress_bar_load"
                     android:indeterminate="true"
                     style="?android:attr/progressBarStyle"
                     android:layout_gravity="center"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"/>

    </FrameLayout>

    <TextView android:text="@string/label_name"
              android:textAppearance="@style/TextAppearance.AppCompat.Body1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>

    <TextView android:id="@+id/text_view_name"
              android:textAppearance="@style/TextAppearance.AppCompat.Caption"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>


    <TextView android:text="@string/label_created_at"
              android:textAppearance="@style/TextAppearance.AppCompat.Body1"
              android:layout_marginTop="@dimen/content_vertical_margin"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <TextView android:id="@+id/text_view_created_at"
              android:textAppearance="@style/TextAppearance.AppCompat.Caption"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <TextView android:text="@string/label_updated_at"
              android:textAppearance="@style/TextAppearance.AppCompat.Body1"
              android:layout_marginTop="@dimen/content_vertical_margin"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <TextView android:id="@+id/text_view_updated_at"
              android:textAppearance="@style/TextAppearance.AppCompat.Caption"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

</LinearLayout>
