<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/view_top"
                android:paddingStart="@dimen/content_horizontal_margin"
                android:paddingEnd="@dimen/content_horizontal_margin"
                android:paddingTop="@dimen/content_vertical_margin"
                android:paddingBottom="@dimen/content_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.lakeel.altla.vision.admanager.presentation.view.fragment.EditUserAreaDescriptionFragment">

    <TextView android:id="@+id/text_view_label_id"
              android:text="@string/label_id"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <TextView android:id="@+id/text_view_id"
              android:layout_below="@id/text_view_label_id"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layput_name"
            android:layout_below="@id/text_view_id"
            android:layout_marginTop="@dimen/content_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/text_input_edit_text_name"
                android:inputType="text"
                android:maxLength="25"
                android:hint="@string/hint_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

    <TextView android:id="@+id/text_view_label_area"
              android:text="@string/label_area"
              android:layout_below="@id/text_input_layput_name"
              android:layout_marginTop="@dimen/content_vertical_margin"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <ImageButton android:id="@+id/image_button_select_area"
                 android:src="@drawable/ic_add_location_black_24dp"
                 android:background="?android:attr/actionBarItemBackground"
                 android:tint="@color/tint_image_button_area_description_model"
                 android:layout_below="@id/text_view_label_area"
                 android:layout_marginStart="@dimen/content_horizontal_margin"
                 android:layout_marginEnd="@dimen/content_horizontal_margin"
                 android:layout_marginTop="@dimen/content_vertical_margin"
                 android:layout_marginBottom="@dimen/content_vertical_margin"
                 android:layout_width="@dimen/touch_target_width"
                 android:layout_height="@dimen/touch_target_height"/>

    <TextView android:id="@+id/text_view_area_name"
              android:layout_below="@id/text_view_label_area"
              android:layout_alignBottom="@id/image_button_select_area"
              android:layout_toEndOf="@id/image_button_select_area"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>

</RelativeLayout>
